--- a/notebooks/zahrea_eda.ipynb
+++ b/notebooks/zahrea_eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d4af0542",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e15c2984",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "106c5e76",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e9433a00",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4099c436",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "849885e4",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "<Axes: title={'center': 'Top 10 Countries'}, ylabel='country'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "254ab8bc",
    "metadata": {},
    "outputs": [
@@ -859,7 +859,7 @@
    "id": "ab894eb1",
    "metadata": {},
    "source": [
-    "### Methodology Thoughts\n",
+    "## Methodology Thoughts\n",
     "\n",
     "After spending time with this dataset and analyzing the data, I can say that this dataset is **inherently biased** which made this project very interesting for me since I was intrigued to see the findings and what insights can be made from skewed data. \n",
     "\n",
@@ -872,13 +872,70 @@
     "\n",
     "While the dataset is still valuable for understanding trends within this narrow group, it should be treated as **non-representative of the broader dating app population**.\n",
     "\n",
-    "### Reflections\n",
+    "## Reflections\n",
+    "\n",
     "This analysis focuses on: \n",
-    "- the demographic of the dataset to get a better understanding of the sample \n",
-    "- the differences between users with the most profile visits vs the users with the least profile visits\n",
+    "- What is the demographic composition of the user sample?\n",
+    "\n",
+    "- What differentiates the Top 5 Most Visited Profiles from the Bottom 5 Least Visited Profiles?\n",
+    "\n",
+    "To answer the second question, we examined how four attributes: **age**, **genderLooking**, **country**, and **profile picture count** varied between the two groups.\n",
+    "\n",
+    "### Age Distribution\n",
+    "\n",
+    "| Group                  | Mean Age | Median Age | Age Range |\n",
+    "|------------------------|----------|------------|-----------|\n",
+    "| Top 5 Most Visited     | 22.8     | 23         | 21–25     |\n",
+    "| Bottom 5 Least Visited | 22.4     | 22         | 21–24     |\n",
+    "\n",
+    "Although the Top 5 users skew slightly older, both groups fall within the same early-20s range. The Bottom 5 had a greater concentration of 21-year-olds (60%), while the Top 5 were more evenly distributed.\n",
+    "\n",
+    "*Insight:* Age is not a strong differentiator between the two groups.\n",
+    "\n",
+    "### Gender Preference (genderLooking)\n",
+    "\n",
+    "| Group                   | % Looking for Men (M) | % Looking for None  |\n",
+    "|------------------------|------------------------|---------------------|\n",
+    "| Top 5 Most Visited     | 100%                   | 0%                  |\n",
+    "| Bottom 5 Least Visited | 80%                    | 20%                 |\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "Both groups predominantly list **‘M’** (looking for men), with the **only deviation** being one bottom profile that listed **‘none’**.\n",
+    "\n",
+    "*Insight:* This variable shows very little variation, suggesting that **gender preference** alone does not significantly impact profile visibility.\n",
+    "\n",
+    "\n",
+    "### Country\n",
+    "\n",
+    "| Group                   | Country Breakdown                    |\n",
+    "|------------------------|---------------------------------------|\n",
+    "| Top 5 Most Visited     | CH: 3, DE: 2                          |\n",
+    "| Bottom 5 Least Visited | DE: 3, IT: 1, FR: 1                   |\n",
+    "\n",
+    "\n",
+    "The *Top 5 profiles* came exclusively from **China** and **Denmark**, while the *Bottom 5* showed slightly more geographic diversity. However, Denmark was present in both groups.\n",
+    "\n",
+    "*Insight:* Country does **not** appear to be a strong standalone factor in profile visits, though regional trends may exist\n",
+    "\n",
+    "\n",
+    "### Profile Pictures Count\n",
+    "\n",
+    "| Group                   | Avg. Picture Count | Min–Max Picture Count |\n",
+    "|------------------------|--------------------|------------------------|\n",
+    "| Top 5 Most Visited     | 9.6                | 3–21                   |\n",
+    "| Bottom 5 Least Visited | 2.2                | 0–7                    |\n",
+    "\n",
+    "\n",
+    "This is where we see the **most dramatic difference**. All of the Top 5 users had at least **3 photos**, while 60% of Bottom 5 users had **none**.\n",
+    "\n",
+    "*Insight:* The presence of pictures is a **strong visual signal** that likely increases visibility and interest.\n",
+    "\n",
+    "## Final Thoughts\n",
+    "\n",
+    "Out of the four features compared, **only profile pictures** showed a meaningful distinction between the most and least visited users. The age, gender preference, and country distributions were largely similar between the two groups, making it difficult to attribute profile popularity to those factors alone.\n",
+    "\n",
+    "This suggests that visual completeness (e.g., uploading profile pictures) is a key contributor to user engagement on the platform. Further analysis with a larger sample could validate whether these trends hold more broadly.\n"
    ]
   }
  ],
