--- a/notebooks/darylisha_eda.ipynb
+++ b/notebooks/darylisha_eda.ipynb
@@ -1786,9 +1786,9 @@
     }
    ],
    "source": [
-    "# correlation between age and profile visits \n",
+    "# correlation between age and profile visits\n",
     "sns.scatterplot(x= lovoo_cleaned_data['age'], y= lovoo_cleaned_data['counts_profileVisits'])\n",
-    "plt.xlabel('Number of Languages Spoken')\n",
+    "plt.xlabel('Number of Profile Visits')\n",
     "plt.ylabel('Profile Visits')\n",
     "plt.show()"
    ]
@@ -1818,7 +1818,7 @@
     "\n",
     "4) **Number of languages spoken and gifts**: The Pearson coefficient is 0.03, suggesting no significant relationship between the number of languages spoken and the number of gifts received. Therefore, there is little to no correlation between these two variables.\n",
     "\n",
-    "5) **Language spoken and number of fans**: The Pearson coefficient is -0.70, indicating a strong negative correlation between the number of fans on a user’s profile and the language spoken. \n",
+    "5) **Age and profile visits**: The Pearson coefficient is -0.70, indicating a strong negative correlation between the number of fans on a user’s age and the number of profile visits to the user \n",
     "\n",
     "We found varying degrees of correlation among the variables we examined, shedding light on how profile characteristics may influence engagement and attractiveness.\n",
     "\n",
