docs: clean up notebook

--- a/notebooks/gennadii_eda.ipynb
+++ b/notebooks/gennadii_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 236,
    "id": "875ee8d8",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 237,
    "id": "e24ac069",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 238,
    "id": "7f885282",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 239,
    "id": "b053df74",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 240,
    "id": "45f27ad6",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "(3992, 42)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 241,
    "id": "977843bf",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 242,
    "id": "05f3e976",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 243,
    "id": "d4e65a2c",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 244,
    "id": "7944e611",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 245,
    "id": "c15c9e17",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 246,
    "id": "f7973994",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "np.int64(20)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 247,
    "id": "895b1401",
    "metadata": {},
    "outputs": [],
@@ -649,51 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 248,
    "id": "ddd48a83",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gender                       0\n",
-       "genderLooking                0\n",
-       "age                          0\n",
-       "name                         0\n",
-       "counts_details               0\n",
-       "counts_pictures              0\n",
-       "counts_profileVisits         0\n",
-       "counts_kisses                0\n",
-       "counts_fans                  0\n",
-       "counts_g                     0\n",
-       "flirtInterests_chat          0\n",
-       "flirtInterests_friends       0\n",
-       "flirtInterests_date          0\n",
-       "country                      0\n",
-       "city                       287\n",
-       "location                    13\n",
-       "isVip                        0\n",
-       "lang_count                   0\n",
-       "verified                     0\n",
-       "shareProfileEnabled          0\n",
-       "freetext                  3859\n",
-       "whazzup                   1580\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "8e804c34",
    "metadata": {},
    "outputs": [
     {
@@ -742,153 +699,23 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>F</td>\n",
-       "      <td>M</td>\n",
-       "      <td>25</td>\n",
-       "      <td>daeni</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8279</td>\n",
-       "      <td>239</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>CH</td>\n",
-       "      <td>Rothenburg</td>\n",
-       "      <td>Rümlang</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Nur tote Fisch schwimmen mit dem Strom</td>\n",
-       "      <td>Nur tote fische schwimmen mit dem strom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>F</td>\n",
-       "      <td>M</td>\n",
-       "      <td>22</td>\n",
-       "      <td>italiana 92</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>5</td>\n",
-       "      <td>663</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>CH</td>\n",
-       "      <td>Sissach</td>\n",
-       "      <td>Sissach</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Primaveraaa&lt;3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>F</td>\n",
-       "      <td>M</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Lauraaa</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1369</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>CH</td>\n",
-       "      <td>Bâle</td>\n",
-       "      <td>Bâle</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>F</td>\n",
-       "      <td>none</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Qqkwmdowlo</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>22187</td>\n",
-       "      <td>1015</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Montréal</td>\n",
-       "      <td>Berne</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Je pense donc je suis.  Instagram quedev</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>F</td>\n",
-       "      <td>M</td>\n",
-       "      <td>21</td>\n",
-       "      <td>schaessie {3</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>12</td>\n",
-       "      <td>35262</td>\n",
-       "      <td>1413</td>\n",
-       "      <td>9</td>\n",
-       "      <td>12</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>Rastatt</td>\n",
-       "      <td>Rastatt</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Instagram: JESSSIESCH</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  gender  ...                                   whazzup\n",
-       "0      F  ...   Nur tote fische schwimmen mit dem strom\n",
-       "1      F  ...                             Primaveraaa<3\n",
-       "2      F  ...                                       NaN\n",
-       "3      F  ...  Je pense donc je suis.  Instagram quedev\n",
-       "4      F  ...                     Instagram: JESSSIESCH\n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "Empty DataFrame\n",
+       "Columns: [gender, genderLooking, age, name, counts_details, counts_pictures, counts_profileVisits, counts_kisses, counts_fans, counts_g, flirtInterests_chat, flirtInterests_friends, flirtInterests_date, country, city, location, isVip, lang_count, verified, shareProfileEnabled, freetext, whazzup]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df[df.isna().all(axis=1)]"
    ]
   },
   {
@@ -905,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 249,
    "id": "79a7ae95",
    "metadata": {},
    "outputs": [],
@@ -915,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 250,
    "id": "586e9681",
    "metadata": {},
    "outputs": [
@@ -1105,7 +932,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 251,
    "id": "32114ae3",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 252,
    "id": "79a9df8f",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1144,7 @@
        "[8 rows x 11 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 253,
    "id": "401ca23b",
    "metadata": {},
    "outputs": [
@@ -1632,7 +1459,7 @@
        "[14 rows x 14 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 254,
    "id": "fe3f5ee8",
    "metadata": {},
    "outputs": [],
@@ -1654,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 255,
    "id": "c0226711",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1650,7 @@
        "[8 rows x 11 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 256,
    "id": "178eedfd",
    "metadata": {},
    "outputs": [
@@ -2138,7 +1965,7 @@
        "[14 rows x 14 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 257,
    "id": "813e7bd3",
    "metadata": {},
    "outputs": [
@@ -2186,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 258,
    "id": "171e09e7",
    "metadata": {},
    "outputs": [
@@ -2238,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 259,
    "id": "91bd4a8b",
    "metadata": {},
    "outputs": [
@@ -2273,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 260,
    "id": "a4e10a5f",
    "metadata": {},
    "outputs": [
@@ -2334,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 261,
    "id": "0e339502",
    "metadata": {},
    "outputs": [
@@ -2371,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 262,
    "id": "4bcd328f",
    "metadata": {},
    "outputs": [
@@ -2457,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "id": "d10d5c34",
    "metadata": {},
    "outputs": [
@@ -2506,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 264,
    "id": "f73e82a1",
    "metadata": {},
    "outputs": [
@@ -2583,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 265,
    "id": "f6108859",
    "metadata": {},
    "outputs": [
