--- a/notebooks/nadya_eda.ipynb
+++ b/notebooks/nadya_eda.ipynb
@@ -318,7 +318,7 @@
     "    hue='genderLooking',              \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                      \n",
+    "    legend=False, errorbar=None                      \n",
     ")\n",
     "\n",
     "plt.title('Profile Sharing Enabled')\n",
@@ -352,7 +352,7 @@
     "    hue='genderLooking',             \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                      \n",
+    "    legend=False, errorbar=None                      \n",
     ")\n",
     "\n",
     "plt.title('Interest in Chatting')\n",
@@ -401,7 +401,7 @@
     "sns.barplot(x='genderLooking', y='flirtInterests_friends', hue='genderLooking',             \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                   )\n",
+    "    legend=False, errorbar=None                   )\n",
     "plt.title('Interest in finding friends')"
    ]
   },
@@ -448,7 +448,7 @@
     "    hue='genderLooking',             \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                   )\n",
+    "    legend=False, errorbar=None                   )\n",
     "plt.title('Interest in finding love')"
    ]
   },
@@ -495,7 +495,7 @@
     "    hue='genderLooking',             \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                   )\n",
+    "    legend=False, errorbar=None                   )\n",
     "plt.title('Flirtstars')"
    ]
   },
@@ -542,7 +542,7 @@
     "    hue='genderLooking',             \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                   )\n",
+    "    legend=False, errorbar=None                   )\n",
     "plt.title('Gifts received by Bi and Hetero women from other users')"
    ]
   },
@@ -580,7 +580,7 @@
     "    hue='genderLooking',             \n",
     "    data=loovoo_data,\n",
     "    palette=['blue', 'pink'],\n",
-    "    legend=False                   )\n",
+    "    legend=False, errorbar=None                   )\n",
     "plt.title('Kisses received by Bi and Hetero women from other users')"
    ]
   },
