--- a/notebooks/nadya_eda.ipynb
+++ b/notebooks/nadya_eda.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# import data\n",
-    "loovoo_data = pd.read_csv("../data/lovoo_v3_users_api-results/lovoo_v3_users_api-results.csv")"
+    "loovoo_data = pd.read_csv('../data/lovoo_v3_users_api-results/lovoo_v3_users_api-results.csv')"
    ]
   },
   {
